--- a/article/1cd0dcf6853069d28fcfb5f33b8cb3a2.html
+++ b/article/1cd0dcf6853069d28fcfb5f33b8cb3a2.html
@@ -118,7 +118,7 @@
         
         <div class="page-operation">
             <div><a href="#"><img src="/imgs/icons/arrow-up-circle.svg" alt=""></a></div>
-            <div></div>
+            <div><a href="https://book.youlelive.top/article/c31514713c2fc74a7869c4fceade0893.html"><img src="/imgs/icons/arrow-left-circle.svg" alt=""></a></div>
             <div><a href="https://book.youlelive.top/article/3993737886765f8753e3c464fbeb40b3.html"><img src="/imgs/icons/arrow-right-circle.svg" alt=""></a></div>
         </div>
         
@@ -200,7 +200,7 @@
 
 
     <div class="container-prevnext">
-    <div></div>
+    <div><a href="https://book.youlelive.top/article/c31514713c2fc74a7869c4fceade0893.html">← 唐纳德·诺曼《设计心理学》读书笔记</a></div>
     <div><a href="https://book.youlelive.top/article/3993737886765f8753e3c464fbeb40b3.html">冰寒《听肌肤的话2问题肌肤护理全书》读书笔记  →</a></div>
 </div>
 </div>
