--- a/article/011e92869ec4dbd2c49edeb85270a55f.html
+++ b/article/011e92869ec4dbd2c49edeb85270a55f.html
@@ -118,7 +118,7 @@
         
         <div class="page-operation">
             <div><a href="#"><img src="/imgs/icons/arrow-up-circle.svg" alt=""></a></div>
-            <div></div>
+            <div><a href="https://book.youlelive.top/article/ab8d5f81b8e60ae2a6c033ec8e61acfc.html"><img src="/imgs/icons/arrow-left-circle.svg" alt=""></a></div>
             <div><a href="https://book.youlelive.top/article/c31514713c2fc74a7869c4fceade0893.html"><img src="/imgs/icons/arrow-right-circle.svg" alt=""></a></div>
         </div>
         
@@ -174,7 +174,7 @@
 
 
     <div class="container-prevnext">
-    <div></div>
+    <div><a href="https://book.youlelive.top/article/ab8d5f81b8e60ae2a6c033ec8e61acfc.html">← 周璐《我用阅读教育孩子》读书笔记</a></div>
     <div><a href="https://book.youlelive.top/article/c31514713c2fc74a7869c4fceade0893.html">唐纳德·诺曼《设计心理学》读书笔记  →</a></div>
 </div>
 </div>
