--- a/article/ab8d5f81b8e60ae2a6c033ec8e61acfc.html
+++ b/article/ab8d5f81b8e60ae2a6c033ec8e61acfc.html
@@ -118,7 +118,7 @@
         
         <div class="page-operation">
             <div><a href="#"><img src="/imgs/icons/arrow-up-circle.svg" alt=""></a></div>
-            <div></div>
+            <div><a href="https://book.youlelive.top/article/780524c6d33c2d88be5966d1852109bf.html"><img src="/imgs/icons/arrow-left-circle.svg" alt=""></a></div>
             <div><a href="https://book.youlelive.top/article/011e92869ec4dbd2c49edeb85270a55f.html"><img src="/imgs/icons/arrow-right-circle.svg" alt=""></a></div>
         </div>
         
@@ -179,7 +179,7 @@
 
 
     <div class="container-prevnext">
-    <div></div>
+    <div><a href="https://book.youlelive.top/article/780524c6d33c2d88be5966d1852109bf.html">← 赫尔伯特·史迪凡尼《跑步圣经》第2版读书笔记</a></div>
     <div><a href="https://book.youlelive.top/article/011e92869ec4dbd2c49edeb85270a55f.html">乔丹·彼得森《人生十二法则》读书笔记  →</a></div>
 </div>
 </div>
